--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,3 +11,14 @@ environment:
 
 dev_dependencies:
   pedantic: ^1.9.0
+  ffigen: ^1.2.0
+
+ffigen:
+  name: TwainDsm
+  description: Bindings to `twain.h`.
+  output: 'lib/twaindsm.dart'
+  headers:
+    entry-points:
+      - 'twaindsm/twain.h'
+    include-directives: # include only these header files and necessary structs from other header files
+      - '**twain.h'
