--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ description: A simple command-line application.
 environment:
   sdk: '>=2.10.0 <3.0.0'
 
-#dependencies:
-#  path: ^1.7.0
+dependencies:
+  ffi: ^0.1.3
 
 dev_dependencies:
   pedantic: ^1.9.0
