--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ description: A simple command-line application.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.12.0-259.9.beta <3.0.0' # ffi: ^1.0.0 required
 
 dependencies:
-  ffi: ^0.1.3
+  ffi: ^1.0.0
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  ffigen: ^1.2.0
+  pedantic: ^1.10.0
+  ffigen: ^2.0.3
 
 ffigen:
   name: TwainDsm
