--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A simple command-line application.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.12.0-259.9.beta <3.0.0' # ffi: ^1.0.0 required
+  sdk: '>=2.13.0-93.0.dev <3.0.0' # ffi: ^1.0.0 required
 
 dependencies:
   ffi: ^1.0.0
