--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A simple command-line application.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.13.0-93.0.dev <3.0.0' # ffi: ^1.0.0 required
+  sdk: '>=2.13.0 <3.0.0'
 
 dependencies:
   ffi: ^1.0.0
@@ -12,7 +12,7 @@ dependencies:
 
 dev_dependencies:
   pedantic: ^1.10.0
-  ffigen: ^2.4.2
+  ffigen: ^3.0.0
 
 ffigen:
   name: TwainDsm
@@ -23,3 +23,6 @@ ffigen:
       - 'twaindsm/twain.h'
     include-directives: # include only these header files and necessary structs from other header files
       - '**twain.h'
+  structs:
+    pack:
+      '.*': 2
